@@ -8,6 +8,8 @@
 
 	* main/Math/FileRandomSource.class.php: added.
 
+	* main/Flow/HttpRequest.class.php: setGetVar() and setPostVar() added.
+
 2007-08-15	Denis M. Gabaidulin
 
 	* core/Form/Filters/NormalizeUrlFilter.class.php: url normalizator filter
